# GraffitiPlot

./: .gitignore  CHANGELOG.md  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: release.yml
examples/: custom_fits_example.py  load_and_edit_example.py  my_custom_fits.py  plot_example.py
scripts/: install_file_association.py
src/graffiti_plot/: __init__.py  core.py  fit_ui.py  fits.py  save_load.py  viewer.py
tests/: test_fits.py  test_performance_mpl_vs_graffiti.py  test_savefig_modebar.py
